# nixops_hcloud

./: .envrc  .gitignore  .pylintrc  LICENSE  README.md  TODO.md  default.nix  overrides.nix  pyproject.toml  shell.nix
bootstrap/: configuration.nix  fetchHetznerKeys.nix  nixos-install-hetzner-cloud.sh  nixos-install-hetzner.cloud.sh
nix/: cloud-init-nixos.patch  hetzner.patch  nixpkgs.nix  overlays.nix  sources.json
nixops_hcloud/: hcloud_resources.py  hcloud_util.py  plugin.py
nixops_hcloud/backends/: hcloud.py
nixops_hcloud/nix/: context.nix  default.nix  hcloud.nix  hcloud_sshkey.nix  hcloud_volume.nix
nixops_hcloud/resources/: __init__.py  hcloud_sshkey.py  hcloud_volume.py
nixops_hetznercloud/: hcloud_resources.py  hcloud_util.py  plugin.py
nixops_hetznercloud/backends/: hetznercloud.py
nixops_hetznercloud/nix/: context.nix  default.nix  hetznercloud.nix  hetznercloud_sshkey.nix  lib.nix
nixops_hetznercloud/nix/cloud.cfg.d/: 90-hetznercloud.cfg  92-hetznercloud-ds.cfg  93-hetznercloud.cfg
nixops_hetznercloud/resources/: __init__.py  hetznercloud_sshkey.py
tests/: test_hcloud_util.py
tests/functional/: id_rsa.pub  id_rsa2.pub  single_machine_hcloud_base.nix
