[tool.poetry]
name = "nixops_hetznercloud"
version = "0.1.0"
description = "NixOps plugin for Hetzner Cloud"
authors = ["Rodrigo Gryzinski <rogryza@rogryza.com>"]
license = "MIT"

[tool.poetry.dependencies]
hcloud = "^1.9.1"
python = "~3.8"
nixops = {git = "https://github.com/NixOS/nixops.git"}

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
pylint = "^2.6.0"
isort = "^5.5.3"

[tool.poetry.plugins."nixops"]
hetznercloud = "nixops_hetznercloud.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
